@@ -1,4 +1,5 @@
 3.1:
+- fix wrong output file index numbers in the exclude views protocol
 - fix gold erasing option in the fid. alignment protocol
 - fix generating ctf output; hide some params from manual ctf protocol; do not run autofit for manual protocol
 - added xform file to ctfphaseflip to rotate astigmatism estimation and adjust for x-shifts for the image center
